redesing the techStrip section
